# THIRAWAT-mapper

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
src/thirawat_mapper/: __init__.py  __main__.py  cli.py
src/thirawat_mapper/index/: build.py
src/thirawat_mapper/infer/: bulk.py  query.py  utils.py
src/thirawat_mapper/io/: __init__.py  export_csv.py
src/thirawat_mapper/models/: __init__.py  bms_pooling.py  embedder.py  rag_llm.py  rag_pipeline.py  reranker.py
src/thirawat_mapper/utils/: __init__.py  lancedb.py
src/thirawat_mapper_beta/: __init__.py
src/thirawat_mapper_beta/index/: __init__.py  build.py
src/thirawat_mapper_beta/infer/: __init__.py  bulk.py  conversion.py  query.py  shared_filters.py  utils.py
src/thirawat_mapper_beta/io/: __init__.py  duckdb_read.py  export_csv.py  usagi.py
src/thirawat_mapper_beta/models/: __init__.py  bms_pooling.py  embedder.py  rag_llm.py  rag_pipeline.py  rag_prompt.py  reranker.py
src/thirawat_mapper_beta/scoring/: __init__.py  post_scorer.py
src/thirawat_mapper_beta/utils/: __init__.py  text.py
tests/: test_atc_scope.py  test_bms_pooling.py  test_cli_dispatch.py  test_cloudflare_llm.py  test_embedder_pooling.py  test_encoder_config.py  test_infer_bulk_helpers.py  test_infer_post_tiebreak.py  test_inn2usan.py  test_io_duckdb_read.py  test_io_export_csv.py  test_io_usagi.py  test_openrouter_llm.py  test_post_scorer.py  test_post_scorer_douit.py  test_post_scorer_gate.py  test_rag_pipeline.py  test_utils_text.py
