[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[project]
name = "thirawat-mapper-beta"
version = "0.1.1"
description = "Minimal indexing and inference toolkit for terminology mapping."
readme = "README.md"
requires-python = ">=3.11,<3.12"
authors = [{ name = "Natthawut Max Adulyanukosol", email = "max@sidata.plus" }]

dependencies = [
  "duckdb>=0.10",
  "lance>=0.13",
  "lancedb>=0.9",
  "numpy>=1.24",
  "pandas>=2.0",
  "pyarrow>=14.0",
  "rich>=13.7",
  "sentence-transformers>=2.4",
  "torch>=2.2",
  "transformers>=4.38",
  "protobuf>=4.25",
  "tiktoken>=0.7",
  "sentencepiece>=0.2.1",
  "rerankers>=0.7",
  "pylate>=1.3",
  "datasets>=4.0",
  "tqdm>=4.66",
  "openpyxl>=3.1.5",
  "pydantic>=2.7",
]

[dependency-groups]
dev = ["pytest>=8.0"]

[project.urls]
Repository = "https://sidata.plus/projects/thirawat-mapper-beta"
Issues = "https://sidata.plus/support"

[tool.hatch.version]
path = "src/thirawat_mapper_beta/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/thirawat_mapper_beta"]

[tool.hatch.build.targets.sdist]
include = [
  "README.md",
  "spec/",
  "src/",
]
