[build-system]
requires = ["hatchling>=1.21", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "thirawat-mapper"
dynamic = ["version"]
description = "Minimal indexing and inference toolkit for terminology mapping."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Natthawut Max Adulyanukosol", email = "max@sidata.plus" }]

dependencies = [
  "duckdb>=0.10",
  "lance>=0.13",
  "lancedb>=0.9",
  "numpy>=1.24",
  "pandas>=2.0",
  "pyarrow>=14.0",
  "rich>=13.7",
  "sentence-transformers>=2.4",
  "torch>=2.2",
  "transformers>=4.38",
  "protobuf>=4.25",
  "tiktoken>=0.7",
  "sentencepiece>=0.2.1",
  "rerankers>=0.7",
  "pylate>=1.3",
  "datasets>=4.0",
  "tqdm>=4.66",
  "openpyxl>=3.1.5",
  "pydantic>=2.7",
]

[project.scripts]
thirawat = "thirawat_mapper.cli:main"

[dependency-groups]
dev = ["pytest>=8.0"]

[project.urls]
Repository = "https://sidata.plus/projects/thirawat-mapper-beta"
Issues = "https://sidata.plus/support"

[tool.hatch.version]
source = "vcs"

[tool.hatch.version.raw-options]
tag_regex = "^(?:v)?(?P<version>.+)$"

[tool.hatch.build.targets.wheel]
packages = ["src/thirawat_mapper"]

[tool.hatch.build.targets.sdist]
include = [
  "README.md",
  "pyproject.toml",
  "src/",
  "tests/",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
